WSO2_APIM_KUBE_ISTIO/control-plane/service-cp.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Service
  metadata:
    name: apim-wso2am-acp-1-service
    namespace: wso2-cp
  spec:
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: binary
      port: 9611
      protocol: TCP
      targetPort: 9611
    - name: binary-secure
      port: 9711
      protocol: TCP
      targetPort: 9711
    - name: jms-tcp
      port: 5672
      protocol: TCP
      targetPort: 5672
    - name: servlet-https
      port: 9443
      protocol: TCP
      targetPort: 9443
    selector:
      deployment: apim-wso2am-acp
      node: apim-wso2am-acp-1
    sessionAffinity: None
    type: ClusterIP
- apiVersion: v1
  kind: Service
  metadata:
    name: apim-wso2am-acp-2-service
    namespace: wso2-cp
  spec:
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: binary
      port: 9611
      protocol: TCP
      targetPort: 9611
    - name: binary-secure
      port: 9711
      protocol: TCP
      targetPort: 9711
    - name: jms-tcp
      port: 5672
      protocol: TCP
      targetPort: 5672
    - name: servlet-https
      port: 9443
      protocol: TCP
      targetPort: 9443
    selector:
      deployment: apim-wso2am-acp
      node: apim-wso2am-acp-2
    sessionAffinity: None
    type: ClusterIP
- apiVersion: v1
  kind: Service
  metadata:
    name: apim-wso2am-acp-service
    namespace: wso2-cp
  spec:
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: servlet-http
      port: 9763
      protocol: TCP
      targetPort: 9763
    - name: servlet-https
      port: 9443
      protocol: TCP
      targetPort: 9443
    selector:
      deployment: apim-wso2am-acp
    sessionAffinity: None
    type: ClusterIP
kind: List
metadata:
  resourceVersion: ""
